Add PageObject and related classes

--- a/tests/test_app/templates/index.html
+++ b/tests/test_app/templates/index.html
@@ -1,6 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Test App: behave-django</title>
+    </head>
     <body>
-        Behave Django works
+        <h1>Behave Django works</h1>
+
+        <footer>
+            <a href="{% url 'about' %}" role="about">About Us</a>
+        </footer>
     </body>
 </html>
